# jorahn.github.io

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  index.html  styles.css
research/rookworld-demo/: .gitignore  ARBITER_FORMAT.md  DEVELOPMENT_STATUS.md  HUGGINGFACE_SETUP.md  HUGGINGFACE_UPLOAD.md  IMPLEMENTATION_SUMMARY.md  MODEL_CARD_UPDATES.md  PROMPT_FORMATS.md  README.md  ROOK-LM-124M_MODEL_CARD.md  RookWorld-LM-124M_MODEL_CARD.md  SETUP.md  analysis.md  app.js  compare_tokenization.py  index.html  model-config.js  model-utils-huggingface.js  model-utils.js  package-lock.json  package.json  pyproject.toml  reference_implementation.py  requirements.txt  rookworld-styles.css  setup-local.sh  styles.css  tokenizer.js.backup
research/rookworld-demo/components/: reasoning.js  selfplay.js
research/rookworld-demo/gpt2_onnx_quantization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/rookworld-demo/libs/: package.json
research/rookworld-demo/onnx_models_calibrated/RookWorld-LM-124M_fp32/: config.json  generation_config.json
research/rookworld-demo/onnx_models_optimum/ROOK-LM-124M/fp32/: config.json
research/rookworld-demo/scripts/: convert_optimum_final.py  convert_to_onnx.py  convert_to_onnx_simple.py  convert_with_optimum.py  deploy_models.py  download_models.py  export_rook_lm_onnx.py  export_simple_onnx.py  setup_demo.sh
research/rookworld-demo/test_cache/models--jrahn--ROOK-LM-124M/refs/: main
research/rookworld-demo/test_cache/models--jrahn--ROOK-LM-124M/snapshots/56e46f06581802002665d4869b4a01fc5c04d267/: config.json  generation_config.json  (+3 more)
(+30 files in other folders)
