# In your pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-onnx-quantization"
version = "0.1.0"
description = "A project to convert and quantize a GPT-2 model to ONNX INT8."
requires-python = ">=3.9"
dependencies = [
    "transformers~=4.42",
    "torch~=2.3",
    "optimum[onnxruntime]~=1.20",
]

# ADD THIS SECTION
[tool.setuptools]
# Tell setuptools not to look for packages in the current directory.
# This prevents the "Multiple top-level packages discovered" error.
py-modules = []
packages = []
